input and save match predictions for one or all gamedays

--- a/notebooks/2.0-bw-enter-weekly-bets-via-selenium.ipynb
+++ b/notebooks/2.0-bw-enter-weekly-bets-via-selenium.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kicktipp password:········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# enter hiddenly the password\n",
     "import getpass\n",
@@ -28,22 +20,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# parameters\n",
-    "gameday = 4"
+    "## bet individual gameday"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
+    "\n",
+    "# parameters\n",
+    "gameday = 4\n",
     "\n",
     "# prepare driver\n",
     "driver = webdriver.Chrome()\n",
@@ -67,33 +59,81 @@
     "### then get your dictionary and read out the predicted results\n",
     "### then enter them in the respective fields according to below\n",
     "\n",
-    "test = driver.find_elements_by_xpath(\"//table/tbody/tr[1]/td[5]/input\")\n",
-    "test[1].clear()\n",
-    "test[1].send_keys('15')\n",
-    "test[2].clear()\n",
-    "test[2].send_keys('20')"
+    "# bet every game 2:1\n",
+    "for game in range(1,10):\n",
+    "    foo = driver.find_elements_by_xpath(\"//table/tbody/tr[{0}]/td[5]/input\".format(game))\n",
+    "    foo[1].clear()\n",
+    "    foo[1].send_keys('2')\n",
+    "    foo[2].clear()\n",
+    "    foo[2].send_keys('1')\n",
+    "    \n",
+    "# submit bets\n",
+    "driver.find_element_by_name('submitbutton').click()\n",
+    "\n",
+    "# logout & close browser\n",
+    "driver.find_element_by_class_name('navtoggle').click()\n",
+    "driver.find_element_by_link_text('Logout').click()\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## bet all games this season 2:1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<selenium.webdriver.remote.webelement.WebElement (session=\"25d6895b86006842e11a70d5c4b8689f\", element=\"0.7364111590309859-1\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"25d6895b86006842e11a70d5c4b8689f\", element=\"0.7364111590309859-2\")>,\n",
-       " <selenium.webdriver.remote.webelement.WebElement (session=\"25d6895b86006842e11a70d5c4b8689f\", element=\"0.7364111590309859-3\")>]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test[2]"
+    "from selenium import webdriver\n",
+    "\n",
+    "# parameters\n",
+    "start_game_day = 4\n",
+    "\n",
+    "# prepare driver\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.set_page_load_timeout(20)\n",
+    "\n",
+    "# load webpage\n",
+    "driver.get('https://www.kicktipp.de/wolter/profil/login')\n",
+    "driver.maximize_window()\n",
+    "driver.implicitly_wait(20)\n",
+    "\n",
+    "# enter login and pw\n",
+    "driver.find_element_by_id(\"kennung\").send_keys(\"benjamin.wolter.23@gmail.com\")\n",
+    "driver.find_element_by_name(\"passwort\").send_keys(pswd)\n",
+    "driver.find_element_by_name(\"submitbutton\").click()\n",
+    "\n",
+    "# loop over all game days left:\n",
+    "\n",
+    "for gameday in range(start_game_day,35):\n",
+    "    # load tippabgabe page\n",
+    "    driver.get('https://www.kicktipp.de/wolter/tippabgabe?&spieltagIndex={0}'.format(gameday))\n",
+    "\n",
+    "    # access cells in tippabgabetable\n",
+    "    ### check if td[2] and td[3] are the teams you are looking for, or take the teams\n",
+    "    ### then get your dictionary and read out the predicted results\n",
+    "    ### then enter them in the respective fields according to below\n",
+    "\n",
+    "    # bet every game 2:1\n",
+    "    for game in range(1,10):\n",
+    "        foo = driver.find_elements_by_xpath(\"//table/tbody/tr[{0}]/td[5]/input\".format(game))\n",
+    "        foo[1].clear()\n",
+    "        foo[1].send_keys('2')\n",
+    "        foo[2].clear()\n",
+    "        foo[2].send_keys('1')\n",
+    "\n",
+    "    # submit bets\n",
+    "    driver.find_element_by_name('submitbutton').click()\n",
+    "\n",
+    "# logout & close browser\n",
+    "driver.find_element_by_class_name('navtoggle').click()\n",
+    "driver.find_element_by_link_text('Logout').click()\n",
+    "driver.close()"
    ]
   }
  ],
