read fixture and ask for games' bet

--- a/notebooks/2.0-bw-enter-weekly-bets-via-selenium.ipynb
+++ b/notebooks/2.0-bw-enter-weekly-bets-via-selenium.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kicktipp password:········\n"
+     ]
+    }
+   ],
    "source": [
     "# enter hiddenly the password\n",
     "import getpass\n",
@@ -28,9 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VfB Stuttgart vs. Fortuna Düsseldorf\n",
+      "2\n",
+      "2\n",
+      "1899 Hoffenheim vs. Borussia Dortmund\n",
+      "1\n",
+      "3\n",
+      "1. FC Nürnberg vs. Hannover 96\n",
+      "1\n",
+      "0\n",
+      "FC Augsburg vs. Werder Bremen\n",
+      "0\n",
+      "2\n",
+      "VfL Wolfsburg vs. SC Freiburg\n",
+      "2\n",
+      "1\n",
+      "Hertha BSC vs. Bor. Mönchengladbach\n",
+      "1\n",
+      "3\n",
+      "FC Schalke 04 vs. FC Bayern München\n",
+      "0\n",
+      "3\n",
+      "Bayer 04 Leverkusen vs. FSV Mainz 05\n",
+      "1\n",
+      "0\n",
+      "Eintracht Frankfurt vs. RB Leipzig\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "\n",
@@ -43,7 +85,7 @@
     "\n",
     "# load webpage\n",
     "driver.get('https://www.kicktipp.de/wolter/profil/login')\n",
-    "driver.maximize_window()\n",
+    "#driver.maximize_window()\n",
     "driver.implicitly_wait(20)\n",
     "\n",
     "# enter login and pw\n",
@@ -59,13 +101,26 @@
     "### then get your dictionary and read out the predicted results\n",
     "### then enter them in the respective fields according to below\n",
     "\n",
-    "# bet every game 2:1\n",
+    "# get team matchups\n",
     "for game in range(1,10):\n",
-    "    foo = driver.find_elements_by_xpath(\"//table/tbody/tr[{0}]/td[5]/input\".format(game))\n",
-    "    foo[1].clear()\n",
-    "    foo[1].send_keys('2')\n",
-    "    foo[2].clear()\n",
-    "    foo[2].send_keys('1')\n",
+    "    team1 = driver.find_element_by_xpath(\"//table/tbody/tr[{0}]/td[2]\".format(game)).text\n",
+    "    team2 = driver.find_element_by_xpath(\"//table/tbody/tr[{0}]/td[3]\".format(game)).text\n",
+    "    print(\"{0} vs. {1}\".format(team1,team2))\n",
+    "    home_goals = str(input())\n",
+    "    away_goals = str(input())\n",
+    "    bar = driver.find_elements_by_xpath(\"//table/tbody/tr[{0}]/td[5]/input\".format(game))\n",
+    "    bar[1].clear()\n",
+    "    bar[1].send_keys(home_goals)\n",
+    "    bar[2].clear()\n",
+    "    bar[2].send_keys(away_goals)\n",
+    "    \n",
+    "# # bet every game 2:1\n",
+    "# for game in range(1,10):\n",
+    "#     bar = driver.find_elements_by_xpath(\"//table/tbody/tr[{0}]/td[5]/input\".format(game))\n",
+    "#     bar[1].clear()\n",
+    "#     bar[1].send_keys('2')\n",
+    "#     bar[2].clear()\n",
+    "#     bar[2].send_keys('1')\n",
     "    \n",
     "# submit bets\n",
     "driver.find_element_by_name('submitbutton').click()\n",
@@ -74,6 +129,39 @@
     "driver.find_element_by_class_name('navtoggle').click()\n",
     "driver.find_element_by_link_text('Logout').click()\n",
     "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VfB Stuttgart vs. Fortuna Düsseldorf\n",
+    "2\n",
+    "2\n",
+    "1899 Hoffenheim vs. Borussia Dortmund\n",
+    "1\n",
+    "3\n",
+    "1. FC Nürnberg vs. Hannover 96\n",
+    "1\n",
+    "0\n",
+    "FC Augsburg vs. Werder Bremen\n",
+    "0\n",
+    "2\n",
+    "VfL Wolfsburg vs. SC Freiburg\n",
+    "2\n",
+    "1\n",
+    "Hertha BSC vs. Bor. Mönchengladbach\n",
+    "1\n",
+    "3\n",
+    "FC Schalke 04 vs. FC Bayern München\n",
+    "0\n",
+    "3\n",
+    "Bayer 04 Leverkusen vs. FSV Mainz 05\n",
+    "1\n",
+    "0\n",
+    "Eintracht Frankfurt vs. RB Leipzig\n",
+    "1\n",
+    "2"
    ]
   },
   {
